Follow up for #130 (#131)
This PR is a follow up to to keep #111 concise and focus only on the actual implemented feature. This PR only includes renames and added javadocs that was done in #111 and was unrelated.