@@ -22,7 +22,7 @@
  * THE SOFTWARE.
  */
 
-package edu.ucr.cs.riple.core.global;
+package edu.ucr.cs.riple.core.cache.downstream;
 
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSet;
@@ -54,7 +54,7 @@ public class DownstreamImpactCacheImpl implements DownstreamImpactCache {
   /** Set of downstream dependencies. */
   private final ImmutableSet<ModuleInfo> downstreamModules;
   /** Public APIs in the target modules that have a non-primitive return value. */
-  private final ImmutableMultimap<Integer, MethodImpact> methods;
+  private final ImmutableMultimap<Integer, DownstreamImpact> store;
   /** Annotator Config. */
   private final Config config;
   /** Method declaration tree instance. */
@@ -64,12 +64,12 @@ public class DownstreamImpactCacheImpl implements DownstreamImpactCache {
     this.config = config;
     this.downstreamModules = config.downstreamInfo;
     this.tree = tree;
-    this.methods =
+    this.store =
         Multimaps.index(
             tree.getPublicMethodsWithNonPrimitivesReturn().stream()
-                .map(MethodImpact::new)
+                .map(DownstreamImpact::new)
                 .collect(ImmutableSet.toImmutableSet()),
-            MethodImpact::hashCode);
+            DownstreamImpact::hashCode);
   }
 
   @Override
@@ -82,34 +82,34 @@ public class DownstreamImpactCacheImpl implements DownstreamImpactCache {
     MethodRegionTracker tracker = new MethodRegionTracker(config, config.downstreamInfo, tree);
     // Generate fixes corresponding methods.
     ImmutableSet<Fix> fixes =
-        methods.values().stream()
+        store.values().stream()
             .filter(
                 input ->
                     !tracker
                         .getCallersOfMethod(input.node.location.clazz, input.node.location.method)
                         .isEmpty()) // skip methods that are not called anywhere.
             .map(
-                methodImpact ->
+                downstreamImpact ->
                     new Fix(
                         new AddMarkerAnnotation(
                             new OnMethod(
-                                methodImpact.node.location.path,
-                                methodImpact.node.location.clazz,
-                                methodImpact.node.location.method),
+                                downstreamImpact.node.location.path,
+                                downstreamImpact.node.location.clazz,
+                                downstreamImpact.node.location.method),
                             config.nullableAnnot),
                         "null",
                         false))
             .collect(ImmutableSet.toImmutableSet());
-    DownstreamImpactEvaluator analyzer =
+    DownstreamImpactEvaluator evaluator =
         new DownstreamImpactEvaluator(new DownstreamDependencySupplier(config, tracker, tree));
-    ImmutableSet<Report> reports = analyzer.evaluate(fixes);
+    ImmutableSet<Report> reports = evaluator.evaluate(fixes);
     // Update method status based on the results.
-    methods
+    this.store
         .values()
         .forEach(
             method -> {
               MethodNode node = method.node;
-              Set<OnParameter> impactedParameters = analyzer.getImpactedParameters(node.location);
+              Set<OnParameter> impactedParameters = evaluator.getImpactedParameters(node.location);
               reports.stream()
                   .filter(input -> input.root.toMethod().equals(node.location))
                   .findAny()
@@ -119,20 +119,20 @@ public class DownstreamImpactCacheImpl implements DownstreamImpactCache {
   }
 
   /**
-   * Retrieves the corresponding {@link MethodImpact} to a fix.
+   * Retrieves the corresponding {@link DownstreamImpact} to a fix.
    *
    * @param fix Target fix.
-   * @return Corresponding {@link MethodImpact}, null if not located.
+   * @return Corresponding {@link DownstreamImpact}, null if not located.
    */
   @Nullable
-  private MethodImpact fetchMethodImpactForFix(Fix fix) {
+  private DownstreamImpact fetchMethodImpactForFix(Fix fix) {
     if (!fix.isOnMethod()) {
       return null;
     }
     OnMethod onMethod = fix.toMethod();
-    int predictedHash = MethodImpact.hash(onMethod.method, onMethod.clazz);
-    Optional<MethodImpact> optional =
-        this.methods.get(predictedHash).stream()
+    int predictedHash = DownstreamImpact.hash(onMethod.method, onMethod.clazz);
+    Optional<DownstreamImpact> optional =
+        this.store.get(predictedHash).stream()
             .filter(m -> m.node.location.equals(onMethod))
             .findAny();
     return optional.orElse(null);
@@ -142,31 +142,30 @@ public class DownstreamImpactCacheImpl implements DownstreamImpactCache {
    * Returns the effect of applying a fix on the target on downstream dependencies.
    *
    * @param fix Fix targeting an element in target.
-   * @param fixesLocation Location in target that will be annotated as {@code @Nullable}.
+   * @param fixTree Location in target that will be annotated as {@code @Nullable}.
    * @return Effect on downstream dependencies.
    */
-  private int effectOnDownstreamDependencies(Fix fix, Set<Location> fixesLocation) {
-    MethodImpact methodImpact = fetchMethodImpactForFix(fix);
-    if (methodImpact == null) {
+  private int effectOnDownstreamDependencies(Fix fix, Set<Location> fixTree) {
+    DownstreamImpact downstreamImpact = fetchMethodImpactForFix(fix);
+    if (downstreamImpact == null) {
       return 0;
     }
-    int individualEffect = methodImpact.getEffect();
+    int individualEffect = downstreamImpact.getEffect();
     // Some triggered errors might be resolved due to fixes in the tree, and we should not double
     // count them.
-    Set<Error> triggeredErrors = methodImpact.getTriggeredErrors();
+    Set<Error> triggeredErrors = downstreamImpact.getTriggeredErrors();
     long resolvedErrors =
         triggeredErrors.stream()
-            .filter(
-                error -> error.isSingleFix() && fixesLocation.contains(error.toResolvingLocation()))
+            .filter(error -> error.isSingleFix() && fixTree.contains(error.toResolvingLocation()))
             .count();
     return individualEffect - (int) resolvedErrors;
   }
 
   @Override
   public int computeLowerBoundOfNumberOfErrors(Set<Fix> tree) {
-    Set<Location> fixLocations = tree.stream().map(Fix::toLocation).collect(Collectors.toSet());
+    Set<Location> fixTree = tree.stream().map(Fix::toLocation).collect(Collectors.toSet());
     OptionalInt lowerBoundEffectOfChainOptional =
-        tree.stream().mapToInt(fix -> effectOnDownstreamDependencies(fix, fixLocations)).max();
+        tree.stream().mapToInt(fix -> effectOnDownstreamDependencies(fix, fixTree)).max();
     if (lowerBoundEffectOfChainOptional.isEmpty()) {
       return 0;
     }
@@ -185,28 +184,28 @@ public class DownstreamImpactCacheImpl implements DownstreamImpactCache {
         .filter(Fix::isOnMethod)
         .flatMap(
             fix -> {
-              MethodImpact impact = fetchMethodImpactForFix(fix);
+              DownstreamImpact impact = fetchMethodImpactForFix(fix);
               return impact == null ? Stream.of() : impact.getImpactedParameters().stream();
             })
         .collect(ImmutableSet.toImmutableSet());
   }
 
   @Override
-  public Set<Error> getTriggeredErrors(Fix fix) {
+  public ImmutableSet<Error> getTriggeredErrors(Fix fix) {
     // We currently only store impact of methods on downstream dependencies.
     if (!fix.isOnMethod()) {
-      return Set.of();
+      return ImmutableSet.of();
     }
-    MethodImpact impact = fetchMethodImpactForFix(fix);
+    DownstreamImpact impact = fetchMethodImpactForFix(fix);
     if (impact == null) {
-      return Set.of();
+      return ImmutableSet.of();
     }
-    return impact.getTriggeredErrors();
+    return ImmutableSet.copyOf(impact.getTriggeredErrors());
   }
 
   @Override
   public void updateImpactsAfterInjection(Set<Fix> fixes) {
-    this.methods.values().forEach(methodImpact -> methodImpact.updateStatus(fixes));
+    this.store.values().forEach(downstreamImpact -> downstreamImpact.updateStatus(fixes));
   }
 
   @Override
